--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
+  sqflite:
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
   http: ^0.13.4
